--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "Capmonster_Key": "",
     "2Captcha_Key": "",
     "Anticaptcha_Key": "",
-    "Discord_Webhook": "https://discord.com/api/webhooks/792445426657001532/A9-tOm5GFRoJN3x37i4GoJ852w7SNxnGdj-am-cmUuSO2hw5ujsERcP8jdF96vDJfbFU",
+    "Discord_Webhook": "",
     "Task_Delay": 1,
     "Entry_Delay_Min": 5,
     "Entry_Delay_Max": 10,
